--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ DATABASE_URL="postgresql://user:password@host:5432/database?sslmode=require"
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your-super-secret-key-here-generate-with-openssl-rand-base64-32
 
+# Google OAuth
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
 # Stripe
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
